# 231-329_Bardina

1laba/lab1/: fill_db.py  requests.http
1laba/lab1/lab1/: settings.py  urls.py
1laba/lab1/mainapp/: models.py
1laba/lab1/mainapp/migrations/: 0001_initial.py  0003_alter_historicalevents_is_peaceful.py
2laba/: .env  docker-compose.yaml
2laba/backend/: db.sqlite3  fill_db.py  init_db.py  requirements.txt
2laba/backend/lab1/: __init__.py  asgi.py  settings.py  wsgi.py
2laba/backend/mainapp/: views.py
3laba/backend/: .dockerignore  Dockerfile  requests.http
3laba/backend/lab1/: urls.py
3laba/backend/mainapp/: serializers.py
3laba/backend/mainapp/migrations/: 0002_historicalevents_delete_something.py
3laba/lab3_qt/: clientinterface.h  historicalevents.h  mainwindow.ui
3laba/lab3_qt/lab3_qt/: CMakeLists.txt  clientinterface.cpp  historicalevents.cpp  mainwindow.cpp  mainwindow.h
3laba/nginx/templates/: defaul.conf.template
